# tarea-3-algoritmos

./: CMakeLists.txt  main.cpp  readme.txt
include/Tarea/: JSONConverter.hpp  bloomFilter.hpp  hashes.hpp  parser.hpp  test.hpp
src/: CMakeLists.txt  JSONConverter.cpp  bloomFilter.cpp  hashes.cpp  parser.cpp  test.cpp
